# stock-research

./: .gitignore  AGENTS.md  LICENSE  batch_list.json  batch_progress.json  cpo_stocks.json  optical2_stocks.json  optical_stocks.json  pyproject.toml  shell_helper_batch_list.py  shell_helper_check_db.py  shell_helper_clear_redis.py  shell_helper_get_160.py  shell_helper_log_step.py  shell_helper_redis_get.ps1  shell_helper_redis_test.py  shell_helper_save_progress.py  shell_helper_test_stock_code.py  shell_helper_update_progress.py  shell_helper_verify_digits.py  shell_helper_verify_redis.py  stock_code.py  stocks_bk6658.txt  test_redis.py
.agents/skills/cn-stock-batch/: SKILL.md
.agents/skills/cn-stock-research/: PERFORMANCE_NOTES.md  SKILL.md
.agents/skills/cn-stock-research/references/: examples.md
cnstock_gap/: __init__.py  cli.py
cnstock_gap/core/: flow.py  ratelimit.py
cnstock_gap/sources/: eastmoney.py  sina.py  tencent.py
cnstock_gap/utils/: codeutil.py
poolmaker/: compare_pools.py  fetch_gainers_8pct.py  fetch_qq_price_ratio.py  pool_manager.py  rank_fetcher.py  stockrank.json  test_gainers_8pct.py  test_rank_fetcher.py
